[gd_scene load_steps=7 format=3 uid="uid://bbmim14x44ey4"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ql26e"]
[ext_resource type="TileSet" uid="uid://dsf5ho1he6dtf" path="res://assets/tilesets/game_tileset.tres" id="2_5c8rl"]
[ext_resource type="PackedScene" uid="uid://bxixvs6mfya0l" path="res://scenes/music_player.tscn" id="2_lrwa4"]

[sub_resource type="LabelSettings" id="LabelSettings_64te4"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_yk5xf"]
font_size = 28
outline_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_u2gcj"]
font_size = 30
outline_size = 1

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ql26e")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("2_5c8rl")
format = 2
layer_0/tile_data = PackedInt32Array(851991, 65536, 0, 1, 983040, 11, 65537, 786432, 11, 131073, 786432, 11, 196609, 786432, 11, 262145, 786432, 11, 327681, 983040, 10, 393217, 851968, 11, 458753, 1245184, 10, 524289, 1376256, 10, 589825, 1179648, 11, 655361, 1507328, 10, 720897, 1507328, 11, 786433, 1507328, 11, 851969, 1507328, 11, 2, 1114112, 12, 65538, 851968, 11, 131074, 851968, 11, 196610, 851968, 11, 262146, 851968, 11, 327682, 851968, 11, 393218, 851968, 11, 458754, 851968, 11, 524290, 1179648, 10, 589826, 1179648, 11, 655362, 1572864, 10, 720898, 1703936, 10, 786434, 1507328, 11, 851970, 1507328, 11, 3, 1245184, 12, 65539, 1048576, 11, 131075, 917504, 11, 196611, 917504, 11, 262147, 917504, 11, 327683, 917504, 11, 393219, 1048576, 10, 458755, 851968, 11, 524291, 1179648, 10, 589827, 1179648, 11, 655363, 1179648, 11, 720899, 1572864, 10, 851971, 1572864, 11, 4, 1048576, 11, 65540, 917504, 12, 131076, 1507328, 1, 196612, 1507328, 1, 262148, 1507328, 1, 327684, 1507328, 1, 393220, 851968, 10, 458756, 851968, 11, 524292, 1179648, 10, 589828, 1179648, 11, 655364, 1179648, 11, 720900, 1179648, 11, 786436, 1179648, 11, 851972, 1179648, 11, 5, 851968, 12, 65541, 1703936, 1, 131077, 1572864, 1, 196613, 1572864, 1, 262149, 1572864, 1, 327685, 1703936, 0, 393221, 851968, 10, 458757, 851968, 11, 524293, 1245184, 10, 589829, 1245184, 11, 655365, 1245184, 11, 720901, 1245184, 11, 786437, 1245184, 11, 851973, 1245184, 11, 6, 851968, 12, 65542, 1507328, 2, 131078, 4, 0, 196614, 4, 0, 262150, 4, 0, 327686, 1507328, 0, 393222, 917504, 10, 458758, 917504, 11, 524294, 917504, 11, 589830, 917504, 11, 655366, 917504, 11, 720902, 917504, 11, 786438, 917504, 11, 851974, 1048576, 10, 7, 917504, 12, 65543, 1507328, 2, 131079, 4, 0, 196615, 4, 0, 262151, 4, 0, 327687, 1572864, 0, 393223, 1572864, 1, 458759, 1572864, 1, 524295, 1572864, 1, 589831, 1572864, 1, 655367, 1703936, 0, 720903, 1507328, 1, 786439, 1507328, 1, 851975, 917504, 10, 8, 1572864, 1, 65544, 1572864, 2, 131080, 4, 0, 196616, 65536, 2, 262152, 4, 0, 327688, 4, 0, 393224, 0, 1, 458760, 4, 0, 524296, 4, 0, 589832, 4, 0, 655368, 1572864, 0, 720904, 1572864, 1, 786440, 1572864, 1, 851976, 1572864, 1, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 65536, 0, 262153, 4, 0, 327689, 0, 1, 393225, 4, 0, 458761, 4, 0, 524297, 4, 0, 589833, 65536, 1, 655369, 4, 0, 720905, 4, 0, 786441, 4, 0, 851977, 0, 1, 10, 0, 0, 65546, 131072, 1, 131082, 0, 2, 196618, 0, 0, 262154, 131072, 2, 327690, 4, 0, 393226, 4, 0, 458762, 4, 0, 524298, 4, 0, 589834, 4, 0, 655370, 4, 0, 720906, 4, 0, 786442, 4, 0, 851978, 4, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 65536, 0, 327691, 4, 0, 393227, 65536, 1, 458763, 4, 0, 524299, 0, 2, 589835, 131072, 0, 655371, 4, 0, 720907, 4, 0, 786443, 65536, 2, 851979, 65536, 2, 12, 0, 0, 65548, 0, 1, 131084, 0, 0, 196620, 0, 0, 262156, 65536, 2, 327692, 4, 0, 393228, 0, 2, 458764, 4, 0, 524300, 65536, 2, 589836, 4, 0, 655372, 65536, 2, 720908, 4, 0, 786444, 0, 2, 851980, 0, 2, 13, 0, 0, 65549, 0, 0, 131085, 65536, 1, 196621, 65536, 0, 262157, 131072, 0, 327693, 4, 0, 393229, 4, 0, 458765, 4, 0, 524301, 4, 0, 589837, 4, 0, 655373, 4, 0, 720909, 4, 0, 786445, 0, 1, 851981, 131072, 2, 14, 262144, 22, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 4, 0, 327694, 4, 0, 393230, 4, 0, 458766, 458752, 10, 524302, 458752, 11, 720910, 4, 0, 786446, 4, 0, 851982, 4, 0, 15, 65536, 0, 65551, 0, 0, 131087, 0, 0, 196623, 131072, 1, 262159, 4, 0, 327695, 4, 0, 393231, 4, 0, 458767, 524288, 10, 524303, 524288, 11, 720911, 0, 11, 786447, 0, 11, 851983, 0, 11, 16, 0, 0, 65552, 0, 0, 131088, 131072, 2, 196624, 0, 0, 262160, 65536, 0, 327696, 65536, 10, 393232, 0, 11, 458768, 327680, 10, 524304, 524288, 11, 720912, 4, 0, 786448, 0, 2, 851984, 131072, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 4, 0, 327697, 131072, 13, 458769, 589824, 10, 524305, 393216, 11, 589841, 589824, 12, 655377, 4, 0, 720913, 4, 0, 786449, 4, 0, 851985, 4, 0, 18, 0, 0, 65554, 131072, 1, 131090, 0, 0, 196626, 0, 2, 262162, 4, 0, 327698, 131072, 13, 393234, 4, 0, 458770, 131072, 0, 524306, 131072, 13, 589842, 4, 0, 655378, 131072, 1, 720914, 4, 0, 786450, 4, 0, 851986, 4, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 4, 0, 327699, 131072, 13, 393235, 131072, 0, 458771, 4, 0, 655379, 4, 0, 720915, 65536, 2, 786451, 0, 2, 851987, 4, 0, 20, 65536, 1, 65556, 65536, 0, 131092, 131072, 1, 196628, 0, 2, 393236, 4, 0, 458772, 4, 0, 851988, 4, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 1, 196629, 0, 0, 393237, 131072, 2, 458773, 0, 1, 589845, 0, 0, 655381, 196608, 10, 720917, 0, 11, 786453, 0, 11, 851989, 65536, 12, 22, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 262166, 131072, 13, 393238, 0, 0, 458774, 0, 0, 589846, 0, 0, 655382, 4, 0, 720918, 65536, 0, 786454, 4, 0, 23, 0, 0, 65559, 0, 0, 131095, 65536, 2, 196631, 0, 0, 262167, 131072, 13, 393239, 0, 0, 458775, 0, 1, 655383, 131072, 1, 720919, 4, 0, 786455, 4, 0, 0, 786432, 12, 65536, 1507328, 1, 131072, 1507328, 1, 196608, 1507328, 1, 262144, 1507328, 1, 327680, 851968, 10, 393216, 851968, 11, 458752, 1179648, 10, 524288, 1179648, 11, 589824, 1179648, 11, 655360, 1507328, 10, 720896, 1507328, 11, 786432, 1507328, 11, 851968, 1507328, 11, 786435, 1572864, 11, 327700, 196608, 12, 262164, 65536, 10, 262165, 131072, 13, 655376, 589824, 12, 589840, 720896, 11, 655375, 327680, 12, 589839, 524288, 11, 655374, 458752, 12, 589838, 458752, 11, 524307, 196608, 10, 589843, 65536, 12, 589844, 196608, 10, 655380, 65536, 12, 851990, 196608, 10, 327701, 0, 0, 327702, 65536, 0, 524311, 0, 0, 524309, 0, 0, 524310, 65536, 1, 327703, 0, 0, 589847, 0, 0, 524308, 0, 0, 393233, 0, 0, 720916, 0, 0, 786452, 0, 1)
layer_1/tile_data = PackedInt32Array(393237, 786432, 26, 458773, 786432, 27, 393238, 851968, 26, 458774, 851968, 27, 11, 720896, 6, 12, 786432, 6, 13, 1310720, 4, 14, 262144, 22, 15, 786432, 6, 16, 786432, 6, 17, 851968, 6, 23, 720896, 6, 20, 262144, 22, 21, 851968, 6, 19, 720896, 6, 786442, 720896, 5, 851978, 720896, 5, 786443, 196608, 3, 851979, 65536, 1, 786444, 983040, 4, 851980, 65536, 1, 720906, 720896, 5, 720907, 2162690, 21, 720908, 851968, 5, 655370, 720896, 4, 655371, 786432, 4, 655372, 851968, 4, 786445, 851968, 4, 851981, 851968, 5, 65556, 0, 11, 131092, 327680, 10, 65550, 0, 11, 262158, 196608, 12, 196622, 0, 11, 131086, 0, 11, 262157, 131072, 13, 262156, 65536, 10, 327692, 196608, 12, 327691, 65536, 10, 393227, 0, 11, 458763, 0, 12, 524299, 4, 0, 458764, 4, 0, 524300, 4, 0, 524298, 4, 0, 458762, 4, 0, 196629, 589824, 12, 131093, 589824, 10, 196628, 524288, 12, 196627, 458752, 12, 131091, 458752, 10, 196623, 1769474, 26, 393226, 1769474, 26, 720919, 1835010, 18, 786455, 1835010, 19, 65544, 1376258, 18, 131080, 1376258, 19, 196616, 1376258, 20, 65545, 1441794, 18, 131081, 1441794, 19, 196617, 1441794, 20, 65546, 1507330, 18, 131082, 1507330, 19, 196618, 1507330, 20, 65551, 1835010, 18, 131087, 1835010, 19, 65552, 1900546, 18, 131088, 1900546, 19, 655373, 1310722, 23, 131077, 1179650, 23, 589842, 1245186, 23, 196631, 1310722, 23, 327701, 2097154, 21, 327703, 2228226, 21, 262161, 2097154, 19, 262162, 2162690, 19, 262163, 2228226, 19, 589835, 2359298, 24, 589836, 2424834, 24, 589837, 2490370, 24, 786451, 1835010, 23, 786448, 1572866, 21, 851984, 1572866, 22, 524310, 1376258, 21, 589846, 1376258, 22, 655382, 1376258, 23, 524311, 1441794, 21, 589847, 1441794, 22, 655383, 1441794, 23, 524296, 2097154, 21, 786446, 65536, 1, 393233, 196608, 3, 131084, 196608, 3, 196615, 196608, 3, 65558, 196608, 3, 786449, 65536, 1, 65559, 1114114, 31, 131095, 1114114, 32, 65557, 1900546, 26, 131089, 1507330, 26, 65553, 1638402, 26, 262166, 720896, 31, 524304, 196610, 30)
layer_2/tile_data = PackedInt32Array()

[node name="BackgroundMusic" parent="." instance=ExtResource("2_lrwa4")]

[node name="StoryText" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 245.0
offset_top = 108.0
offset_right = 925.0
offset_bottom = 544.0

[node name="RichTextLabel" type="RichTextLabel" parent="StoryText"]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 670.0
offset_bottom = 429.0
text = "The world is populated and full. As a landlord it is pretty hard to find affordable land to buy. So you bought the cheapest land you could find. Now you just need people to live here so that you are able to earn money. Unfortunately the land you bought is right next to a very very active volcano, so fire and lavastreams are pretty common. But hey, as long as the people are paying you and the money is flowing that should be alright, shouldn't it?

Your quest is to raise the CHARM of the landscape so that people are willing to live here while the natural disasters are destroying the land. Climate change is kicking in pretty bad so the disasters are getting worse over time. 

Your goal is to earn as much money as possible until the land is completely destroyed.
"

[node name="Button" type="Button" parent="StoryText"]
layout_mode = 0
offset_left = 259.0
offset_top = 347.0
offset_right = 416.0
offset_bottom = 393.0

[node name="Label" type="Label" parent="StoryText/Button"]
layout_mode = 0
offset_right = 157.0
offset_bottom = 45.0
text = "START"
label_settings = SubResource("LabelSettings_64te4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainButtons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonStart" type="Button" parent="MainButtons"]
process_mode = 3
layout_mode = 0
offset_left = 468.0
offset_top = 235.0
offset_right = 712.0
offset_bottom = 303.0

[node name="Label" type="Label" parent="MainButtons/ButtonStart"]
layout_mode = 0
offset_right = 243.0
offset_bottom = 68.0
text = "START GAME"
label_settings = SubResource("LabelSettings_yk5xf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonExit" type="Button" parent="MainButtons"]
layout_mode = 0
offset_left = 470.0
offset_top = 330.0
offset_right = 711.0
offset_bottom = 404.0

[node name="Label" type="Label" parent="MainButtons/ButtonExit"]
layout_mode = 0
offset_right = 241.0
offset_bottom = 75.0
text = "EXIT"
label_settings = SubResource("LabelSettings_u2gcj")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StoryText/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MainButtons/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MainButtons/ButtonExit" to="." method="_on_button_exit_pressed"]
